--- a/datech17/extra_collaborative.css
+++ b/datech17/extra_collaborative.css
@@ -4,3 +4,9 @@
     border: 0px;
     box-shadow: none;
 }
+.slide-header {
+    position: absolute;
+    top:  -30px;
+    left: -20px;
+    /* color: red; */
+}
