--- a/copenhagen-emnlp-17/extra_emnlp17.css
+++ b/copenhagen-emnlp-17/extra_emnlp17.css
@@ -12,3 +12,12 @@
 }
 /* table bar */
 span.bar-css {text-decoration:overline;}
+/* add highlighting to row */
+#table-full tr#TBL-1-4-, #table-full tr#TBL-1-7- {
+    font-weight: bold;
+}
+
+.reveal .slides section .fragment.highlight-green.visible {
+    font-weight: bold;
+    color: #67abd8 !important;
+}
